# Agentic-Web-Research-System

./: README.md
advanced-agent/: README.md  main.py  pyproject.toml
advanced-agent/src/: firecrawl.py  workflow.py
simple-agent/: README.md  main.py  pyproject.toml
