[project]
name = "research-agent-simple"
version = "0.1.0"
description = "Simple research agent with web crawling capabilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-mcp-adapters>=0.1.4",
    "langchain-openai>=0.3.19",
    "langgraph>=0.4.8",
    "python-dotenv>=1.1.0",
]
